--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,9 +21,5 @@ jobs:
           java-version: 11
       - name: Build with Maven
         run: mvn -q package --file pom.xml -Dmaven.test.skip=true
-      - name: Core Tests
-        run: mvn -pl core test
-      - name: Persistence Tests
-        run: mvn -pl persistence test
-      - name: Rest Tests
-        run: mvn -pl rest test
+      - name: Run Tests
+        run: mvn test
