--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${SERVER_PORT:8080}
+  port: ${SERVER_PORT:8090}
 
 spring:
   main:
@@ -12,4 +12,4 @@ spring:
     add-mappings: false
 
 graph:
-  path: ${GRAPH_PATH:C:\Users\wallyson\Desktop\bexs\graph.csv}
+  path: ${GRAPH_PATH:C:\Users\wallyson\Desktop\bexs\graph_files\graph.csv}
